Misleading tooltip for Clean Tool in Weight Tools Toolshelf - AFTER 2.70 #38955

Closed
opened 2014-03-04 18:36:17 +01:00 by Terry Wallwork · 6 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I am using Blender 2.69 GIT REV GIT2014-03-04-09-09-38-dad9600
on a Fedora 20 Linux 64bit box with an Intel 3000HD GFX card.

I noticed that when in Weight Paint Mode, with Vertex Selection Masking active. If I use the Clean tool in
[3D View Editor > Toolshelf > Tools Tab > Weight Tools Panel]
the operator tool tip mentions that it will clean the weight values
under a set value.

This seems to be incorrect, it will clean values that equal to or
less than the set value.

In the attached blend file I have a plane which has been weight painted on one side to a value of .5. When clean is used with a value of .5 it will clear the right side of the weight painting.

Attached Blend file, System info and video demonstration showing issue and tooltip message.

3DViewEditor-Toolshelf-WeightTools-Clean.blend

WeightTools-CleanTool-MisleadingTooltip.webm.webm

system-info.txt

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender 2.69 GIT REV GIT2014-03-04-09-09-38-dad9600 on a Fedora 20 Linux 64bit box with an Intel 3000HD GFX card. I noticed that when in Weight Paint Mode, with Vertex Selection Masking active. If I use the Clean tool in [3D View Editor > Toolshelf > Tools Tab > Weight Tools Panel] the operator tool tip mentions that it will clean the weight values under a set value. This seems to be incorrect, it will clean values that equal to or less than the set value. In the attached blend file I have a plane which has been weight painted on one side to a value of .5. When clean is used with a value of .5 it will clear the right side of the weight painting. Attached Blend file, System info and video demonstration showing issue and tooltip message. [3DViewEditor-Toolshelf-WeightTools-Clean.blend](https://archive.blender.org/developer/F79926/3DViewEditor-Toolshelf-WeightTools-Clean.blend) [WeightTools-CleanTool-MisleadingTooltip.webm.webm](https://archive.blender.org/developer/F79927/WeightTools-CleanTool-MisleadingTooltip.webm.webm) [system-info.txt](https://archive.blender.org/developer/F79929/system-info.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Bastien Montagne self-assigned this 2014-03-05 09:38:46 +01:00
Bastien Montagne changed title from Misleading tooltip for Clean Tool in Weight Tools Toolshelf to Misleading tooltip for Clean Tool in Weight Tools Toolshelf - AFTER 2.70 2014-03-05 09:39:13 +01:00

This issue was referenced by blender/blender-addons-contrib@a28dce6cc8

This issue was referenced by blender/blender-addons-contrib@a28dce6cc8d2b8338f220909bacc8ef7b1018677

This issue was referenced by a28dce6cc8

This issue was referenced by a28dce6cc8d2b8338f220909bacc8ef7b1018677

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a28dce6cc8.

Closed by commit a28dce6cc8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38955
No description provided.