Fix T38955: Misleading tooltip for Clean Tool in Weight Tools Toolshelf.